# multifloat

./: .gitignore  AUDIT_TODO.md  BENCHMARK.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
bench/: BENCHMARK.md.j2  build_benchmark_md.py  ops.py  run_benchmarks.py
bench/results/: benchmark-m1-max.json  benchmark-pop-os.json
blas/: ddgemm.f90  ddtrsm.f90  wgemm.f90  wtrsm.f90
cmake/: FindMPFR.cmake  FortranCompiler.cmake  multifloatsfConfig.cmake.in
doc/: BENCHMARK.md  CHANGELOG.md
doc/developer/: BOOST_COMPARISON.md  BOOST_OP_MATRIX.md  INTERNALS.md  PLAN-cexpm1-td-internals.md
fsrc/: CMakeLists.txt  constant.jl  multifloat.f90  multifloat_fuzz.f90  multifloat_test.f90  multifloats.fypp  test.f90
include/: multifloats.h
include/multifloats/: float64x2.h
scripts/: build_op_matrix.py  check_fortran_abi_sync.sh  gen_constants.py
src/: CMakeLists.txt  complex64x2_abi_kernels.inc  dd_constants.f90.inc  dd_constants.hh  float64x2_abi.inc  float64x2_exp_log.inc  localize_symbols.sh.in  multifloat.hh  multifloats.hh  multifloats_c.cc  multifloats_c.h  multifloats_io.cc  multifloats_math.cc  multifloats_math_abi_complex.inc  multifloats_math_abi_complex_kernels.inc  multifloats_math_abi_scalar.inc  multifloats_math_bessel.inc  multifloats_math_exp_log.inc  multifloats_math_inv_trig.inc  multifloats_math_special.inc  multifloats_math_trig.inc
test/: README.md  abi_equivalence.f90  bench.cc  bench.f90  bench_abi.f90  bench_c.f90  crosscheck.cc  crosscheck_bindings.f90  dd_bindc.f90  fuzz.cc  fuzz.f90  fuzz_mpfr.cc  multifloat_fuzz.f90  multifloats_precision.f90  precision.f90  test.cc  test.f90  test_boost_dd.cc  test_common.hh  test_common_mpfr.hh  test_mod.f90
